ecmascript/parser/tests/test262-error-references/fail/dc4aa6a1fb2c6317.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/dc4aa6a1fb2c6317.js:1:10
  |
1 | for (;;) const x = 10;
  |          ^^^^^

